chore: refactor FlowController.updateNamespace()